# SadTalker

./: Makefile  inference.py  inference_server.py  pyproject.toml
src/: generate_facerender_batch.py
src/utils/: face_enhancer.py
