[project]
name = "sadtalker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "av==12.3.0",
    "basicsr==1.4.2",
    "face-alignment==1.3.5",
    "facexlib==0.3.0",
    "fastapi==0.115.4",
    "gfpgan==1.3.8",
    "gradio==4.44.1",
    "imageio-ffmpeg==0.4.7",
    "imageio==2.19.3",
    "joblib==1.1.0",
    "kornia==0.6.8",
    "librosa==0.9.2",
    "numba==0.58.1",
    "numpy==1.23.4",
    "pydantic==2.9.2",
    "pydub==0.25.1",
    "pyyaml==6.0.2",
    "resampy==0.3.1",
    "safetensors==0.4.5",
    "scikit-image==0.19.3",
    "scipy==1.10.1",
    "torch==1.12.1+cu113",
    "torchaudio==0.12.1",
    "torchvision==0.13.1+cu113",
    "tqdm==4.67.0",
    "uvicorn==0.32.0",
    "yacs==0.1.8",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
explicit = true
